--- a/package.json
+++ b/package.json
@@ -16,16 +16,27 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.0.2",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@stream-io/flat-list-mvcp": "^0.10.3",
+    "@supabase/supabase-js": "^2.43.4",
     "expo": "~51.0.9",
+    "expo-av": "^14.0.5",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.6",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
+    "expo-media-library": "~16.0.3",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
@@ -33,7 +44,10 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-svg": "15.2.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.10",
+    "stream-chat-expo": "^5.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
